Melhorando o tratamento de exceções.